--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,9 @@
                     <li class="nav-item nav-dc">
                         <a target="_blank" href="/discord" class="nav-link"> <i class="fab fa-discord fa-xl"></i> Discord </a>
                     </li>
+                    <li class="nav-item nav-gh">
+                        <a target="_blank" href="/github" class="nav-link"> <i class="fab fa-github fa-xl"></i> Github </a>
+                    </li>
                     <li class="nav-item nav-tw">
                         <a target="_blank" href="/twitter" class="nav-link"> <i class="fab fa-twitter fa-xl"></i> Twitter </a>
                     </li>
