Make Body unselectable and add selection classes noselect/textselect/select

--- a/static/styles/css/main.css
+++ b/static/styles/css/main.css
@@ -48,6 +48,18 @@ body::after {
   width: 100vw;
 }
 
+.noselect {
+  user-select: none;
+}
+
+.select {
+  user-select: auto;
+}
+
+.textselect {
+  user-select: text;
+}
+
 .mcfont {
   font-family: "Minercraftory", sans-serif;
 }
