--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
             -Status: Minecraftserver on/offline, Spieleranzahl, Spieler
         -->
     </head>
-    <body>
+    <body class="noselect">
         <header id="navbar-header">
             <nav class="navbar">
                 <a class="nav-brand" href="<%= pathname == '/' ? '#' : '/' %>">
