--- a/static/styles/scss/main.scss
+++ b/static/styles/scss/main.scss
@@ -55,6 +55,18 @@ body {
     }
 }
 
+.noselect {
+    user-select: none;
+}
+
+.select {
+    user-select: auto;
+}
+
+.textselect {
+    user-select: text;
+}
+
 .mcfont {
     font-family: 'Minercraftory', sans-serif;
 }
