--- a/views/404.ejs
+++ b/views/404.ejs
@@ -41,7 +41,7 @@
 
         <script src="/static/scripts/cookies.js"></script>
     </head>
-    <body>
+    <body class="noselect">
         <header id="navbar-header">
             <nav class="navbar">
                 <a class="nav-brand" href="<%= pathname == '/' ? '#' : '/' %>">
