--- a/static/styles/scss/components/_navbar.scss
+++ b/static/styles/scss/components/_navbar.scss
@@ -75,6 +75,11 @@ header {
                 border: 1px solid transparent;
                 padding: 10px;
 
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+
                 &:hover {
                     color: var(--accent-color);
 
@@ -93,8 +98,9 @@ header {
         }
 
         .user-logo {
-            width: 50px;
+            width: 30px;
             border-radius: 50%;
+            margin-right: 5px;
         }
 
         .active {
